<resources>
    <string name="app_name">Aston Intensive 6</string>

    <string name="text_toolbar_title_contacts">Contacts</string>

    <string name="text_hint_contact_name">Name</string>
    <string name="text_hint_contact_surname">Surname</string>
    <string name="text_hint_contact_phone_number">Phone number</string>
    <string name="text_hint_contact_enter_contact_name">Enter contact name</string>

    <string name="text_desc_image_cancel">Cancel</string>
    <string name="text_desc_image_clear">Clear</string>
    <string name="text_desc_image_search">Search</string>
    <string name="text_desc_image_contact">Contact</string>
    <string name="text_desc_image_back">Back</string>
    <string name="text_desc_image_done">Done</string>

    <string name="text_popup_menu_item_delete">Delete</string>

    <string name="text_name1">Norma</string>
    <string name="text_name2">Harry</string>
    <string name="text_name3">Laura</string>
    <string name="text_name4">Leo</string>
    <string name="text_name5">Josie</string>
    <string name="text_name6">Shelly</string>
    <string name="text_name7">Gordon</string>
    <string name="text_name8">James</string>
    <string name="text_name9">Phillip</string>
    <string name="text_name10">Dexter</string>
    <string name="text_name11">Angel</string>
    <string name="text_name12">Joey</string>
    <string name="text_name13">Maria</string>
    <string name="text_name14">Vince</string>
    <string name="text_name15">Rita</string>
    <string name="text_name16">Miguel</string>
    <string name="text_name17">Debra</string>
    <string name="text_name18">Tony</string>
    <string name="text_name19">Silvio</string>
    <string name="text_name20">Jennifer</string>
    <string name="text_name21">Artie</string>
    <string name="text_name22">Rachel</string>
    <string name="text_name23">Monica</string>
    <string name="text_name24">Phoebe</string>
    <string name="text_name25">Joseph</string>
    <string name="text_name26">Chandler</string>
    <string name="text_name27">Ross</string>
    <string name="text_name28">Gina</string>
    <string name="text_name29">Walter</string>
    <string name="text_name30">Kim</string>
    <string name="text_name31">Jesse</string>
    <string name="text_name32">Gus</string>
    <string name="text_name33">Jimmy</string>
    <string name="text_name34">Saul</string>
    <string name="text_name35">Mike</string>
    <string name="text_name36">Gerald</string>
    <string name="text_name37">Howard</string>
    <string name="text_name38">Nacho</string>
    <string name="text_name39">Lalo</string>
    <string name="text_name40">Sherlock</string>
    <string name="text_name41">John</string>
    <string name="text_name42">Mycroft</string>
    <string name="text_name43">Jim</string>
    <string name="text_name44">Eren</string>
    <string name="text_name45">Mikasa</string>
    <string name="text_name46">Armin</string>
    <string name="text_name47">Reiner</string>
    <string name="text_name48">Connie</string>
    <string name="text_name49">Sasha</string>
    <string name="text_name50">Erwin</string>
    <string name="text_name51">Levi</string>
    <string name="text_name52">Rick</string>
    <string name="text_name53">Morty</string>
    <string name="text_name54">Jerry</string>
    <string name="text_name55">Summer</string>
    <string name="text_name56">Beth</string>
    <string name="text_name57">Leela</string>
    <string name="text_name58">Bender</string>
    <string name="text_name59">Hubert</string>
    <string name="text_name60">Zapp</string>
    <string name="text_name61">Kyle</string>
    <string name="text_name62">Dana</string>
    <string name="text_name63">Warren</string>
    <string name="text_name64">Sheryl</string>
    <string name="text_name65">Michael</string>
    <string name="text_name66">Grace</string>
    <string name="text_name67">David</string>
    <string name="text_name68">Lenny</string>
    <string name="text_name69">Catelyn</string>
    <string name="text_name70">Sansa</string>
    <string name="text_name71">Rory</string>
    <string name="text_name72">Jon</string>
    <string name="text_name73">Kit</string>
    <string name="text_name74">Oona</string>

    <string name="text_surname1">Jennings</string>
    <string name="text_surname2">Truman</string>
    <string name="text_surname3">Palmer</string>
    <string name="text_surname4">Johnson</string>
    <string name="text_surname5">Packard</string>
    <string name="text_surname6">Johnson</string>
    <string name="text_surname7">Cole</string>
    <string name="text_surname8">Hurley</string>
    <string name="text_surname9">Jeffries</string>
    <string name="text_surname10">Morgan</string>
    <string name="text_surname11">Batista</string>
    <string name="text_surname12">Quinn</string>
    <string name="text_surname13">LaGuerta</string>
    <string name="text_surname14">Masuka</string>
    <string name="text_surname15">Bennett</string>
    <string name="text_surname16">Prado</string>
    <string name="text_surname17">Morgan</string>
    <string name="text_surname18">Soprano</string>
    <string name="text_surname19">Dante</string>
    <string name="text_surname20">Melfi</string>
    <string name="text_surname21">Bucco</string>
    <string name="text_surname22">Karen</string>
    <string name="text_surname23">Geller</string>
    <string name="text_surname24">Buffay</string>
    <string name="text_surname25">Francis</string>
    <string name="text_surname26">Murie</string>
    <string name="text_surname27">Geller</string>
    <string name="text_surname28">Tribbiani</string>
    <string name="text_surname29">White</string>
    <string name="text_surname30">Heisenberg</string>
    <string name="text_surname31">Pinkman</string>
    <string name="text_surname32">Fring</string>
    <string name="text_surname33">McGill</string>
    <string name="text_surname34">Goodman</string>
    <string name="text_surname35">Ehrmantraut</string>
    <string name="text_surname36">Wexler</string>
    <string name="text_surname37">Hamlin</string>
    <string name="text_surname38">Varga</string>
    <string name="text_surname39">Salamanca</string>
    <string name="text_surname40">Holmes</string>
    <string name="text_surname41">Watson</string>
    <string name="text_surname42">Hooper</string>
    <string name="text_surname43">Moriarty</string>
    <string name="text_surname44">Yeager</string>
    <string name="text_surname45">Ackerman</string>
    <string name="text_surname46">Arlert</string>
    <string name="text_surname47">Braun</string>
    <string name="text_surname48">Springer</string>
    <string name="text_surname49">Blouse</string>
    <string name="text_surname50">Smith</string>
    <string name="text_surname51">Reiss</string>
    <string name="text_surname52">Sanchez</string>
    <string name="text_surname53">Prime</string>
    <string name="text_surname54">Fry</string>
    <string name="text_surname55">Turanga</string>
    <string name="text_surname56">Rodriguez</string>
    <string name="text_surname57">Farnsworth</string>
    <string name="text_surname58">Wong</string>
    <string name="text_surname59">Kroker</string>
    <string name="text_surname60">Brannigan</string>
    <string name="text_surname61">MacLachlan</string>
    <string name="text_surname62">Ashbrook</string>
    <string name="text_surname63">Frost</string>
    <string name="text_surname64">Lee</string>
    <string name="text_surname65">Horse</string>
    <string name="text_surname66">Zabriskie</string>
    <string name="text_surname67">Bowie</string>
    <string name="text_surname68">Lynch</string>
    <string name="text_surname69">Rodd</string>
    <string name="text_surname70">Stark</string>
    <string name="text_surname71">McCann</string>
    <string name="text_surname72">Snow</string>
    <string name="text_surname73">Harington</string>
    <string name="text_surname74">Chaplin</string>
</resources>