<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background_contact_details"
    android:orientation="vertical"
    tools:context=".presentation.contact_details.ContactDetailsFragment">

    <include
        android:id="@+id/toolbar_contact_details_container"
        layout="@layout/toolbar_contact_details_layout" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/contact_details_photo"
                android:layout_width="@dimen/image_contact_details_size"
                android:layout_height="@dimen/image_contact_details_size"
                android:layout_gravity="center"
                android:layout_margin="@dimen/app_big_margin"
                android:contentDescription="@string/text_desc_image_contact"
                android:scaleType="fitCenter"
                android:src="@drawable/default_photo" />

            <EditText
                android:id="@+id/contact_details_name"
                style="@style/ContactDetails.EditTextName"
                android:hint="@string/text_hint_contact_name" />

            <EditText
                android:id="@+id/contact_details_surname"
                style="@style/ContactDetails.EditTextSurname"
                android:layout_marginTop="@dimen/app_normal_margin"
                android:hint="@string/text_hint_contact_surname" />

            <EditText
                android:id="@+id/contact_details_phone"
                style="@style/ContactDetails.EditTextPhone"
                android:layout_marginTop="@dimen/app_normal_margin"
                android:hint="@string/text_hint_contact_phone_number" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>